# server-django

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: django.yml  webhook.yml
app/: settings.py
authentication/: models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/views/: mock.py
badge/: models.py  serializers.py  urls.py  views.py
badge/migrations/: 0001_initial.py  0002_initial.py
config/: env.py  settings.py  urls.py
feed/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
feed/migrations/: 0001_initial.py  0002_initial.py
feed/views/: mock.py
notification/: models.py  serializers.py  services.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_initial.py
notification/views/: mock.py
search/: serializers.py  urls.py  views.py
search/views/: mock.py
tools/: create-database-mock.sql  deploy.sh  gen-uuid.sh  hard-fix-migration.sh  reset-database.sh  start-service.sh
user/: models.py  serializers.py  services.py  urls.py  views.py
user/migrations/: 0001_initial.py
