[tool.poetry]
name = "logged-me-backend"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]
readme = "README.md"
packages = [{include = "logged_me_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
